# python-skeleton-backend

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  debug_hash.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 21cd8ddcf10c_initial_migration.py
api/: auth.py  deps.py  health.py  items.py
core/: config.py  database.py  security.py
models/: item.py  user.py
schemas/: item.py  user.py
services/: item_service.py  user_service.py
tests/: test_auth.py  test_health.py
